# LogSpiral

./: .gitignore  BACKGROUND.md  README.md  pyproject.toml
data/: ammonite-noaxes.json  ammonite-with-wireframe.json  ammonite.json  annulated-orthocone.json  contact-sheet.config  crioceratite.json  cyrtocone.json  flared.json  nautilus-noaxes.json  nautilus.json  orthocone.json  ramshorn.json  serpenticone.json  shell.json  smooth-nautilus-noaxes.json  smooth-nautilus.json  turritella-coil.json  turritella-helix.json  turritella.json
data/config/: contact-sheet.config  morphological-similarity-weights.config
notebooks/: animated_render.ipynb  animation_frames.ipynb  chamber_septa_builder.ipynb  generate_shell_meshes.ipynb  interactive_render.ipynb  log_spiral.ipynb  maths.ipynb  mesh_plotter.ipynb  schematic_render.ipynb  shell_growth_2d.ipynb  shell_growth_3d.ipynb  shell_mesh_builder.ipynb  shell_pipeline.ipynb  siphuncle_builder.ipynb  static_render.ipynb
scripts/: calculate-morphological-similarity.sh  export-classification.sh  export-preset-classification.py  make-contact-config.py  make-contact-config.sh  make-contact-sheet.py  make-contact-sheet.sh  make-standard-contact-sheets.sh  run-explorer.sh
src/: calculate-morphological-similarity.py  calculate_morphological_similarity.py  export_preset_classification.py  make_contact_config.py  make_contact_sheet.py  morphological_similarity.py  morphospace_explorer.py  streamlit_explorer.py
tests/: test_morphological_similarity.py  test_morphospace_explorer.py  test_streamlit_explorer.py
(+25 files in other folders)
