[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-spiral"
version = "1.17.2"
description = "Logarithmic Spiral"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "imageio",
  "ipykernel",
  "kaleido",
  "matplotlib",
  "nbformat",
  "numpy",
  "plotly",
  "scipy"
]

[tool.setuptools]
py-modules = []
